# AndroidRenderingPlayground

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/github/android/rendering/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/android/rendering/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/github/android/rendering/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
rendering_core/: build.gradle
rendering_core/src/androidTest/java/com/github/android/rendering/core/: ExampleInstrumentedTest.java
rendering_core/src/main/: AndroidManifest.xml
rendering_core/src/main/cpp/: CMakeLists.txt  android_surface.cc  android_surface.h  async_gl_render.cc  async_gl_render.h  gl_render_impl.cc  gl_render_impl.h  log.h  message_loop.cc  message_loop.h  message_loop_epoll.cc  message_loop_epoll.h  render_factory.cc  render_factory.h  render_interface.h  render_jni.cc  thread.cc  thread.h
rendering_core/src/main/java/com/github/android/rendering/core/: GLRenderInterface.java  GLRenderSurfaceView.java  GLRenderTextureView.java  IRenderHost.java  IRenderInterface.java  RenderInstance.java  VSyncReceiver.java
rendering_core/src/test/java/com/github/android/rendering/core/: ExampleUnitTest.java
